Alignement rubriques de droite, correction

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -168,11 +168,13 @@ body {
           font-family: @font-cattedrale;
           color: @color-primary;
           font-size: @font-size-base;
+          clear: both;
 
           // Section timbre
           .eminence-timbre {
             min-height: 90px;
             background-color: @background-dark;
+            display: table;
 
             .cadre-img {
               width: 100px;
@@ -202,6 +204,7 @@ body {
           // Section timbre
           .eminence-timbre-2 {
             min-height: 110px;
+            display: table;
 
             .cadre-img {
               width: 100px;
